testsuite/tests/rename/should_fail/T25901_exp_fail_1.hs
{-# LANGUAGE ExplicitNamespaces #-}

module T25901_exp_fail_1 where

import T25901_exp_fail_1_helper (type C, type D, type T, type K, type K1)
