testsuite/tests/rename/should_fail/T25901_exp_fail_1.stderr
T25901_exp_fail_1.hs:5:34: error: [GHC-61689]
    Module ‘T25901_exp_fail_1_helper’ does not export ‘type C’.

T25901_exp_fail_1.hs:5:42: error: [GHC-35373]
    In the import of ‘T25901_exp_fail_1_helper’:
      an item called ‘D’
      is exported, but it is a data constructor of
      ‘T’.
    Suggested fix:
      Use
        import T25901_exp_fail_1_helper ( T( D ) )
      or
        import T25901_exp_fail_1_helper ( T(..) )
      or
        import T25901_exp_fail_1_helper ( data D )

T25901_exp_fail_1.hs:5:50: error: [GHC-61689]
    Module ‘T25901_exp_fail_1_helper’ does not export ‘type T’.

T25901_exp_fail_1.hs:5:58: error: [GHC-61689]
    Module ‘T25901_exp_fail_1_helper’ does not export ‘type K’.

T25901_exp_fail_1.hs:5:66: error: [GHC-61689]
    Module ‘T25901_exp_fail_1_helper’ does not export ‘type K1’.

